--- a/src/pages/field/field.scss
+++ b/src/pages/field/field.scss
@@ -1,3 +1,26 @@
 page-field {
 
+    .fieldView{
+        
+         
+    }
+
+    .fieldText{
+
+        color: black;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 24px;
+
+    }
+
+    .visitorText{
+
+        color: black;
+        text-align: left;
+        text-transform: uppercase;
+        font-size: 24px;
+    }
+
+
 }
